# kanby

./: .dockerignore  .env.compose.example  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  __init__.py  dependencies.py  main.py
api/core/: __init__.py  config.py
api/routers/: __init__.py  sessions.py
api/schemas/: __init__.py  sessions.py  users.py
api/services/: __init__.py  sessions.py
evals/: task_requirement_validator.evalset.json
kanby/: __init__.py  agent.py  prompt.py
kanby/plugins/: __init__.py  logging.py
kanby/sub_agents/: __init__.py
kanby/sub_agents/github_operator/: __init__.py  agent.py  prompt.py  tools.py
kanby/sub_agents/task_decomposer/: __init__.py  agent.py  prompt.py  schema.py
kanby/sub_agents/task_dependency_mapper/: __init__.py  agent.py  prompt.py  schema.py
kanby/sub_agents/task_generator_pipeline/: __init__.py  agent.py
kanby/sub_agents/task_generator_pipeline/sub_agents/task_decomposer/: __init__.py  (+3 more)
kanby/sub_agents/task_planner/: __init__.py  agent.py  prompt.py
kanby/sub_agents/task_requirement_validator/: __init__.py  agent.py  prompt.py  schema.py
kanby/sub_agents/task_reviewer/: __init__.py  agent.py  prompt.py  schema.py
web/: Dockerfile  index.html  kanby-api.postman_collection.json  nginx.conf  package-lock.json  package.json  vite.config.js
web/src/: App.jsx
web/src/api/: client.js
web/src/components/: ChatPanel.css  ChatPanel.jsx  Message.css  Message.jsx  SessionsPanel.css  SessionsPanel.jsx
web/src/styles/: App.css
(+7 files in other folders)
